@@ -1,5 +1,7 @@
 2010-03-02  Noel O'Boyle
 
+	* test/testsym.py: Added test for PR#2101034
+
 	* test/CMakeLists.txt: Set required environment variables for
 	"make test". Only works with CMake 2.8 though.
 	* test/testbabel.py: Previous buffer fix didn't improve matters. Trying
